Thu Aug  4 18:38:36 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c: cannot compile for Tcl7.6/Tk4.2.

	* ext/tcltklib/tcltklib.c: add nativethread consistency check.

	* ext/tcltklib/stubs.c: ditto.

	* ext/tk/lib/tk.rb: forgot to define TclTkIp.encoding and encoding= 
	  when Tcl is 7.6 or 8.0.

	* ext/tk/lib/tk/wm.rb: support to make some methods as options of 
	  root or toplevel widget. [ruby-talk:150336]

	* ext/tk/lib/tk/root.rb: ditto.

	* ext/tk/lib/tk/toplevel.rb: ditto.

	* ext/tk/lib/tkextlib/SUPPRT_STATUS: update RELEASE_DATE

Thu Aug  4 08:03:39 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extmake): should not modify $mflags for each
	  extentions.

Thu Aug  4 00:25:48 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk, Makefile.in, {bcc32,win32,wince}/Makefile.sub: integrated
	  macro definitions.

	* bcc32/Makefile.sub: LIBRUBY_SO should use DLDOBJS, not EXTOBJS.

	* {win32,wince}/Makefile.sub: separate config.h for compiler versions.

Wed Aug  3 21:59:16 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/variable.rb: TkVariable#trace didn't work on
	  TkVariable retrived from TkVariable.new_hash.ref. [ruby-dev:26721]

Wed Aug  3 08:22:13 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/socket/socket.c (ruby_connect): revert [ruby-talk:111654]
	  changes at 2004-09-07.  [ruby-dev:26656]

Tue Aug  2 10:20:54 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/tcltklib/tcltklib.c: use Tcl_[GS]etVar2Ex instead of
	  Tcl_Obj[GS]etVar2. (avoid Tcl_NewStringObj on supported platforms)

	* ext/tcltklib/tcltklib.c: use ip_{get,set,unset}_variable2_core from
	  ip_{get,set,unset}_variable.

	* ext/tcltklib/tcltklib.c: replaced Tcl_Panic with rb_bug.

Tue Aug  2 01:41:28 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/ping.rb (Ping.pingecho): should rescue StandardError.
	  [ruby-dev:26677]

Mon Aug  1 19:09:41 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>
