@@ -1,3 +1,7 @@
+Fri Aug  5 00:19:33 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* extmk.rb (extmake): needs to be wrapped in an Array.
+
 Thu Aug  4 18:38:36 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
 
 	* ext/tcltklib/tcltklib.c: cannot compile for Tcl7.6/Tk4.2.
@@ -6,10 +10,10 @@ Thu Aug  4 18:38:36 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
 
 	* ext/tcltklib/stubs.c: ditto.
 
-	* ext/tk/lib/tk.rb: forgot to define TclTkIp.encoding and encoding= 
+	* ext/tk/lib/tk.rb: forgot to define TclTkIp.encoding and encoding=
 	  when Tcl is 7.6 or 8.0.
 
-	* ext/tk/lib/tk/wm.rb: support to make some methods as options of 
+	* ext/tk/lib/tk/wm.rb: support to make some methods as options of
 	  root or toplevel widget. [ruby-talk:150336]
 
 	* ext/tk/lib/tk/root.rb: ditto.
